[gd_scene load_steps=6 format=3 uid="uid://dxmu8xik26g24"]

[ext_resource type="Texture2D" uid="uid://be6y73wmcfb2x" path="res://assets/arrow.png" id="1_4jtsr"]
[ext_resource type="Script" path="res://scripts/NameSelect.gd" id="1_ri8la"]
[ext_resource type="Texture2D" uid="uid://b4k5nk2vi3rfq" path="res://assets/arrow-pressed.png" id="2_trb5i"]
[ext_resource type="Texture2D" uid="uid://s22in3av1d3d" path="res://assets/box.png" id="3_rk704"]

[sub_resource type="LabelSettings" id="LabelSettings_0me8d"]
font_size = 50

[node name="NameSelect" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_ri8la")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -104.0
offset_right = 124.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Up1" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")

[node name="Up2" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")

[node name="Up3" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")

[node name="Box1" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("3_rk704")

[node name="Label" type="Label" parent="GridContainer/Box1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "A"
label_settings = SubResource("LabelSettings_0me8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Box2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("3_rk704")

[node name="Label" type="Label" parent="GridContainer/Box2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "A"
label_settings = SubResource("LabelSettings_0me8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Box3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("3_rk704")

[node name="Label" type="Label" parent="GridContainer/Box3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "A"
label_settings = SubResource("LabelSettings_0me8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Down1" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")
flip_v = true

[node name="Down2" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")
flip_v = true

[node name="Down3" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4jtsr")
texture_pressed = ExtResource("2_trb5i")
flip_v = true

[connection signal="pressed" from="GridContainer/Up1" to="." method="_on_up_1_pressed"]
[connection signal="pressed" from="GridContainer/Up2" to="." method="_on_up_2_pressed"]
[connection signal="pressed" from="GridContainer/Up3" to="." method="_on_up_3_pressed"]
[connection signal="pressed" from="GridContainer/Down1" to="." method="_on_down_1_pressed"]
[connection signal="pressed" from="GridContainer/Down2" to="." method="_on_down_2_pressed"]
[connection signal="pressed" from="GridContainer/Down3" to="." method="_on_down_3_pressed"]
